/*
 * Copyright © 2017-2020 factcast.org
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package org.factcast.store.pgsql.internal.snapcache;

import org.factcast.store.pgsql.PgConfigurationProperties;
import org.factcast.store.pgsql.internal.PgMetrics;
import org.springframework.context.annotation.Bean;
import org.springframework.context.annotation.Configuration;
import org.springframework.jdbc.core.JdbcTemplate;

@Configuration
public class SnapshotCacheConfiguration {
    @Bean
    public SnapshotCache snapshotCache(JdbcTemplate jdbcTemplate) {
        return new SnapshotCache(jdbcTemplate);
    }

    @Bean
    public SnapshotCacheCompactor snapshotCacheCompactor(
            SnapshotCache cache,
            PgConfigurationProperties props, PgMetrics pgMetrics) {
        return new SnapshotCacheCompactor(cache, pgMetrics, props.getDeleteSnapshotStaleForDays());
    }
}
