@startuml

title __SNAPCACHE's Class Diagram__\n

  namespace org.factcast.store.pgsql {
    namespace internal {
      namespace snapcache {
        class org.factcast.store.pgsql.internal.snapcache.PgSnapshotData {
            - bytes : byte[]
            - factId : UUID
            + PgSnapshotData()
            + bytes()
            + equals()
            + factId()
            + hashCode()
            + toString()
        }
      }
    }
  }
  

  namespace org.factcast.store.pgsql {
    namespace internal {
      namespace snapcache {
        class org.factcast.store.pgsql.internal.snapcache.SnapshotCache {
            {static} - CLEAR_SNAPSHOT : String
            {static} - SELECT_SNAPSHOT : String
            {static} - TOUCH_SNAPSHOT_ACCESSTIME : String
            {static} - UPSERT_SNAPSHOT : String
            - jdbcTemplate : JdbcTemplate
            + SnapshotCache()
            + clearSnapshot()
            + compact()
            + getSnapshot()
            + setSnapshot()
            - extractSnapshotFromResultSet()
        }
      }
    }
  }
  

  namespace org.factcast.store.pgsql {
    namespace internal {
      namespace snapcache {
        class org.factcast.store.pgsql.internal.snapcache.SnapshotCacheCompactor {
            - days : int
            {static} - log : Logger
            + SnapshotCacheCompactor()
            + compact()
        }
      }
    }
  }
  

  namespace org.factcast.store.pgsql {
    namespace internal {
      namespace snapcache {
        class org.factcast.store.pgsql.internal.snapcache.SnapshotCacheConfiguration {
            + snapshotCache()
            + snapshotCacheCompactor()
        }
      }
    }
  }
  

  org.factcast.store.pgsql.internal.snapcache.SnapshotCacheCompactor o-- org.factcast.store.pgsql.internal.snapcache.SnapshotCache : cache
  org.factcast.store.pgsql.internal.snapcache.SnapshotCacheCompactor o-- org.factcast.store.pgsql.internal.PgMetrics : pgMetrics


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
